logging/sentry-celery-beat-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    run: sentry-celery-beat
  name: sentry-celery-beat
  namespace: logging
spec:
  replicas: 1
  selector:
    matchLabels:
      run: sentry-celery-beat
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: sentry-celery-beat
    spec:
      containers:
      - env:
        - name: SENTRY_URL_PREFIX
          value: http://sentry.xiaolumm.com
        - name: SECRET_KEY
          valueFrom:
            secretKeyRef:
              key: SECRET_KEY
              name: sentry
        - name: C_FORCE_ROOT
          value: "1"
        - name: DATABASE_URL
          valueFrom:
            secretKeyRef:
              key: DATABASE_URL
              name: sentry
        - name: CACHE_URL
          valueFrom:
            secretKeyRef:
              key: CACHE_URL
              name: sentry
        - name: SENTRY_BEACON
          value: "False"
        - name: SENTRY_DATA_DIR
          value: /data
        - name: SENTRY_EMAIL_HOST
          value: smtp.exmail.qq.com
        - name: SENTRY_EMAIL_HOST_PASSWORD
          valueFrom:
            secretKeyRef:
              key: SENTRY_EMAIL_HOST_PASSWORD
              name: sentry
        - name: SENTRY_EMAIL_HOST_USER
          value: xiuqing.mei@xiaolumeimei.com
        - name: SENTRY_EMAIL_PORT
          value: "25"
        - name: SENTRY_EMAIL_USE_TLS
          value: "False"
        - name: SENTRY_SCRIPTS_DIR
          value: /conf
        - name: SENTRY_SERVER_EMAIL
          value: sentry.xiaolumm.com
        - name: SENTRY_BROKER_URL
          valueFrom:
            secretKeyRef:
              key: SENTRY_BROKER_URL
              name: sentry
        - name: CELERY_ALWAYS_EAGER
          value: "False"
        image: slafs/sentry
        name: sentry
        args:
        - celery
        - worker
        - -B
