logging/sentry-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "6"
  labels:
    run: sentry
  name: sentry
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      run: sentry
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: sentry
    spec:
      containers:
      - env:
        - name: SENTRY_URL_PREFIX
          value: http://sentry.xiaolumm.com
        - name: SECRET_KEY
          value: _llx(byf$g52s4^&6!ehtr0yqrz&f%o9z_(90m0oii)sbm^8yt
        - name: C_FORCE_ROOT
          value: "1"
        - name: DATABASE_URL
          value: postgres://postgres:fzODym7XT0@pilfering-goose-postgresql.logging.svc.cluster.local/postgres
        - name: CACHE_URL
          value: hiredis://:Huyiinc12345@r-bp1b4317ea5c3714.redis.rds.aliyuncs.com:6379/10
        - name: SENTRY_BEACON
          value: "False"
        - name: SENTRY_DATA_DIR
          value: /data
        - name: SENTRY_EMAIL_HOST
          value: smtp.exmail.qq.com
        - name: SENTRY_EMAIL_HOST_PASSWORD
          value: Xiuqing2016
        - name: SENTRY_EMAIL_HOST_USER
          value: xiuqing.mei@xiaolumeimei.com
        - name: SENTRY_EMAIL_PORT
          value: "25"
        - name: SENTRY_EMAIL_USE_TLS
          value: "False"
        - name: SENTRY_SCRIPTS_DIR
          value: /conf
        - name: SENTRY_SERVER_EMAIL
          value: sentry.xiaolumm.com
        image: slafs/sentry
        imagePullPolicy: Always
        name: sentry
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
